--- a/BangkokWheels/Views/Shared/_Layout.cshtml
+++ b/BangkokWheels/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="pb-3 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
+    <main role="main" class="pb-3 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 min-h-screen">
         @RenderBody()
     </main>
 
