--- a/BangkokWheels/Areas/Customer/Views/Car/Upsert.cshtml
+++ b/BangkokWheels/Areas/Customer/Views/Car/Upsert.cshtml
@@ -3,10 +3,11 @@
 <div class="py-4">
 
     <div class="flex flex-col justify-center items-start w-5/12 mx-auto">
-        <h2 class="text-black py-2">@(Model.Car.Id != 0 ? "Update" : "Create") Car</h2>
         <img src="@Model.Car.ImageUrl" alt="@Model.Car.Brand" />
+        <h2 class="text-black py-2">@(Model.Car.Id != 0 ? "Update" : "Create") Car</h2>
         <form method="post" class="w-full bg-[#374151] p-8" enctype="multipart/form-data">
             <input asp-for="Car.Id" hidden />
+            <input asp-for="Car.ImageUrl" hidden />
             <div class="relative z-0 mb-6 group">
                 <input asp-for="Car.Brand" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
                 <label asp-for="Car.Brand" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"></label>
