--- a/BangkokWheels/Areas/Customer/Views/Home/Index.cshtml
+++ b/BangkokWheels/Areas/Customer/Views/Home/Index.cshtml
@@ -1,9 +1,29 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<Ad>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="grid grid-cols-3 gap-6 p-8">
+    @foreach (var ad in Model)
+    {
+        <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <img class="p-4 rounded-t-lg" src="@ad.Car.ImageUrl" alt="product image" />
+            </a>
+            <div class="px-5 pb-5">
+
+                <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">@ad.AdTitle</h5>
+                <p class="text-gray-500 dark:text-gray-400">@ad.AdDescription</p>
+
+                <div class="flex items-center justify-between mt-4">
+                    <span class="text-3xl font-bold text-gray-900 dark:text-white">@ad.Car.SalePrice.ToString("c")</span>
+                    <a href="#" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800">
+                        <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                            Details
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    }
 </div>
+
 
