--- a/BangkokWheels/Views/Shared/_LoginPartial.cshtml
+++ b/BangkokWheels/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav flex items-center justify-center">
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
@@ -16,10 +16,10 @@
     }
     else
     {
-        <li class="nav-item">
+        <li class="nav-item me-2">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ms-2">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
     }
