--- a/BangkokWheels/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BangkokWheels/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-5xl py-8 text-center font-bold tracking-wider bg-gradient-to-r from-sky-500 to-indigo-500 mb-6">LOG IN</h1>
+
 <div class="flex flex-wrap ">
     <div class="md:w-1/3 pr-4 pl-4">
         <section>
