--- a/BangkokWheels/Views/Shared/_LoginPartial.cshtml
+++ b/BangkokWheels/Views/Shared/_LoginPartial.cshtml
@@ -5,10 +5,10 @@
 <ul class="navbar-nav flex items-center justify-center">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
+        <li class="nav-item me-2">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ms-2">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
             </form>
