--- a/BangkokWheels/Areas/Customer/Views/Car/Index.cshtml
+++ b/BangkokWheels/Areas/Customer/Views/Car/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model List<Car>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <h1 class="text-5xl py-8 text-center font-bold tracking-wider bg-gradient-to-r from-sky-500 to-indigo-500 mb-6">AD LIST</h1>
 <div class="card border-0">
-
-
-    <div class="card-body p-4">
+    <div class="card-body p-4 px-8">
         <div class="row pb-3">
             <div class="col-6">
             </div>
@@ -15,7 +16,7 @@
             </div>
         </div>
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-            <table id="tblData" class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+            <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
                         <th scope="col" class="px-6 py-3">
@@ -33,8 +34,41 @@
                         <th scope="col" class="px-6 py-3">
                             Actions
                         </th>
+                        <th scope="col" class="px-6 py-3">
+
+                        </th>
                     </tr>
                 </thead>
+                <tbody>
+
+                    @foreach (var obj in Model)
+                    {
+                        @if (@UserManager.GetUserId(User) == obj.OwnerId)
+                        {
+                            <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
+                                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                    @obj.Brand.BrandName
+                                </th>
+                                <td class="px-6 py-4">
+                                    @obj.Model
+                                </td>
+                                <td class="px-6 py-4">
+                                    @obj.ProductionYear
+                                </td>
+                                <td class="px-6 py-4">
+                                    @obj.SalePrice
+                                </td>
+                                <td class="px-6 py-4">
+                                    <a asp-area="Customer" asp-controller="Car" asp-action="Upsert" asp-route-id="@obj.Id" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <a id="delete" onclick="Delete('/customer/car/delete/@obj.Id')" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Delete</a>
+                                </td>
+                            </tr>
+                        }
+
+                    }
+                </tbody>
             </table>
         </div>
     </div>
