--- a/BangkokWheels/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BangkokWheels/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,14 +5,15 @@
 }
 
 <h1 class="text-5xl py-8 text-center font-bold tracking-wider bg-gradient-to-r from-sky-500 to-indigo-500 mb-6">SIGN UP</h1>
-<section class="w-full py-8">
-    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
+<section class="flex justify-center items-start w-full p-8 mx-auto max-w-[1200px]">
+    <img src="/images/RegisterIllustrator.png" class="w-[50%] rounded-xl" />
+    <div class="w-full flex flex-col items-center justify-center px-6 py-8 mx-4 lg:py-0">
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+            <div class="w-full p-6 space-y-4 md:space-y-6 sm:p-8">
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Create and account
                 </h1>
-                <div asp-validation-summary="ModelOnly" class="text-red-600" role="alert"></div>
+                <div asp-validation-summary="ModelOnly" class="w-full text-red-600" role="alert"></div>
                 <form class="space-y-4 md:space-y-6" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                     <div>
                         <label asp-for="Input.Email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
@@ -66,7 +67,7 @@
                         <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" id="roles" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                         </select>
                     </div>
-                    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Default</button>
+                    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Sign up</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                         Already have an account? <a asp-page="/Account/Login" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login here</a>
                     </p>
