--- a/BangkokWheels/Views/Shared/_LoginPartial.cshtml
+++ b/BangkokWheels/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item me-2">
-            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <p class="nav-link text-white" title="Manage">Hello @User.Identity?.Name!</p>
         </li>
         <li class="nav-item ms-2">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
